--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  shared_preferences: ^2.0.15
+  background_location:
+    path: background_location-master
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
